--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.6.5",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "nuxt": "^3.3.3",
     "vite-svg-loader": "^4.0.0"
   },
   "dependencies": {
+    "@nestjs/graphql": "^11.0.5",
+    "@nuxt/types": "^2.16.3",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^3.0.0",
     "@popperjs/core": "^2.11.7",
+    "apollo-server-express": "^3.12.0",
+    "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "cookieparser": "^0.1.0",
+    "graphql": "^16.6.0",
+    "graphql-tools": "^8.3.20",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "popper.js": "^1.16.1",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2"
