--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "cookieparser": "^0.1.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.20",
+    "jose": "^4.14.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
+    "jws": "^4.0.0",
     "popper.js": "^1.16.1",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2"
