--- a/package.json
+++ b/package.json
@@ -22,17 +22,21 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^3.0.0",
     "@popperjs/core": "^2.11.7",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "apollo-server-express": "^3.12.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "cookieparser": "^0.1.0",
+    "flowbite": "^1.6.5",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.20",
     "jose": "^4.14.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "jws": "^4.0.0",
+    "nuxt-icon": "^0.3.3",
     "popper.js": "^1.16.1",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2"
