--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jsonwebtoken": "^9.0.0",
     "jws": "^4.0.0",
     "nuxt-icon": "^0.3.3",
-    "popper.js": "^1.16.1",
+    "password-validator": "^5.3.0",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2"
   }
