--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^3.0.0",
     "@popperjs/core": "^2.11.7",
+    "@tailvue/nuxt": "^0.1.68",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "apollo-server-express": "^3.12.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "click-outside-vue3": "^4.0.1",
     "cookieparser": "^0.1.0",
     "flowbite": "^1.6.5",
     "graphql": "^16.6.0",
