--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nuxt-icon": "^0.3.3",
     "password-validator": "^5.3.0",
     "sass": "^1.62.0",
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "sweetalert2": "^11.7.3"
   }
 }
