sites y edit sites

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/apollo": "^5.0.0-alpha.6",
     "@nuxtjs/tailwindcss": "^6.6.5",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
@@ -23,6 +24,7 @@
     "@nuxtjs/google-fonts": "^3.0.0",
     "@popperjs/core": "^2.11.7",
     "@tailvue/nuxt": "^0.1.68",
+    "@vue/apollo-composable": "^4.0.0-beta.4",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "apollo-server-express": "^3.12.0",
@@ -38,6 +40,7 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "jws": "^4.0.0",
+    "nuxt-graphql-middleware": "^3.0.2",
     "nuxt-icon": "^0.3.3",
     "password-validator": "^5.3.0",
     "sass": "^1.62.0",
