--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "monaco-editor": "^0.38.0",
     "nuxt": "^3.3.3",
+    "nuxt-monaco-editor": "^1.2.2",
     "vite-svg-loader": "^4.0.0"
   },
   "dependencies": {
@@ -36,6 +38,8 @@
     "flowbite": "^1.6.5",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.20",
+    "handlebars": "^4.7.7",
+    "handlebars-helpers": "^0.10.0",
     "jose": "^4.14.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
@@ -45,6 +49,9 @@
     "password-validator": "^5.3.0",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
-    "sweetalert2": "^11.7.3"
+    "sweetalert2": "^11.7.3",
+    "vue-ace-editor": "^1.0.3",
+    "vue-codemirror": "^6.1.1",
+    "vue-monaco": "^1.2.2"
   }
 }
