--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/apollo-composable": "^4.0.0-beta.4",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
+    "@vueup/vue-quill": "^1.2.0",
     "apollo-server-express": "^3.12.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
@@ -49,9 +50,11 @@
     "password-validator": "^5.3.0",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
+    "simple-code-editor": "^2.0.8",
     "sweetalert2": "^11.7.3",
     "vue-ace-editor": "^1.0.3",
     "vue-codemirror": "^6.1.1",
-    "vue-monaco": "^1.2.2"
+    "vue-monaco": "^1.2.2",
+    "vue3-ace-editor": "^2.2.2"
   }
 }
