--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@nuxt/types": "^2.16.3",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^3.0.0",
+    "@nuxtjs/toast": "^3.3.1",
     "@popperjs/core": "^2.11.7",
     "@tailvue/nuxt": "^0.1.68",
     "@vue/apollo-composable": "^4.0.0-beta.4",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
+    "@vuepic/vue-datepicker": "^5.4.0",
     "@vueup/vue-quill": "^1.2.0",
     "apollo-server-express": "^3.12.0",
     "axios": "^1.3.5",
@@ -37,6 +39,7 @@
     "click-outside-vue3": "^4.0.1",
     "cookieparser": "^0.1.0",
     "flowbite": "^1.6.5",
+    "flowbite-datepicker": "^1.2.2",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.20",
     "handlebars": "^4.7.7",
@@ -55,6 +58,8 @@
     "vue-ace-editor": "^1.0.3",
     "vue-codemirror": "^6.1.1",
     "vue-monaco": "^1.2.2",
-    "vue3-ace-editor": "^2.2.2"
+    "vue-toast-notification": "^3.1.1",
+    "vue3-ace-editor": "^2.2.2",
+    "vue3-toastify": "^0.1.11"
   }
 }
